syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service ExecuteFlightplanService {
    rpc ExecuteFlightplan (ExecuteFlightplanRequest) returns (ExecuteFlightplanResponse) {
        option (google.api.http) = {
            post: "/api/v1/flightplans/{id}/execute"
            body: "*"
        };
    };
}

message ExecuteFlightplanRequest {
    string id = 1;
}

message ExecuteFlightplanResponse {
    string id = 1;
}
