syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service ChangeFlightplanService {
    rpc ChangeNumberOfVehicles (ChangeNumberOfVehiclesRequest) returns (ChangeNumberOfVehiclesResponse) {
        option (google.api.http) = {
            put: "/api/v1/flightplans/{id}/numberofvehicles"
            body: "*"
        };
    };
}

message ChangeNumberOfVehiclesRequest {
    string id = 1;
    int32 number_of_vehicles = 2;
}

message ChangeNumberOfVehiclesResponse {
    string id = 1;
    int32 number_of_vehicles = 2;
}
